--- a/composer.json
+++ b/composer.json
@@ -31,28 +31,20 @@
         }
     ],
     "require": {
-        "php": "~5.5|~7.0",
+        "php": "~5.6|~7.0",
 
-        "symfony/framework-bundle": "~2.8|~3.0",
-        "symfony/config": "~2.8|~3.0",
-        "symfony/http-kernel": "~2.8|~3.0",
-        "symfony/dependency-injection": "~2.8|~3.0",
-        "symfony/twig-bundle": "~2.8|~3.0",
+        "symfony/framework-bundle": "~2.8|~3.0|~4.0",
+        "symfony/config": "~2.8|~3.0|~4.0",
+        "symfony/http-kernel": "~2.8|~3.0|~4.0",
+        "symfony/dependency-injection": "~2.8|~3.0|~4.0",
+        "symfony/twig-bundle": "~2.8|~3.0|~4.0",
 
         "twig/twig": "~1.34|~2.0",
         "euskadi31/opengraph": "~1.0"
     },
-    "require-dev": {
-        "symfony/phpunit-bridge": "~2.8|~3.0"
-    },
     "autoload": {
         "psr-4": {
             "Tenolo\\Bundle\\OpenGraphBundle\\": "src/"
-        }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            "Tenolo\\Bundle\\OpenGraphBundle\\Tests\\": "tests/"
         }
     },
     "extra": {
