--- a/composer.json
+++ b/composer.json
@@ -21,9 +21,9 @@
     },
     "authors": [
         {
-            "name": "tenolo - Robert Bernis, Johannes Herberhold GbR",
+            "name": "tenolo GmbH & Co. KG",
             "email": "info@tenolo.de",
-            "homepage": "http://tenolo.de"
+            "homepage": "https://tenolo.de"
         },
         {
             "name": "Nikita Loges",
