--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "license": "MIT",
     "homepage": "https://github.com/tenolo/open-graph-bundle",
     "support": {
-        "email": "support@shapecode.de",
+        "email": "info@tenolo.de",
         "issues": "https://github.com/tenolo/open-graph-bundle/issues",
         "source": "https://github.com/tenolo/open-graph-bundle/releases",
         "wiki": "https://github.com/tenolo/open-graph-bundle/wiki"
