--- a/composer.json
+++ b/composer.json
@@ -31,13 +31,13 @@
         }
     ],
     "require": {
-        "php": "~5.6|~7.0",
+        "php": "~7.2",
 
-        "symfony/framework-bundle": "~2.8|~3.4|~4.0",
-        "symfony/config": "~2.8|~3.4|~4.0",
-        "symfony/http-kernel": "~2.8|~3.4|~4.0",
-        "symfony/dependency-injection": "~2.8|~3.4|~4.0",
-        "symfony/twig-bundle": "~2.8|~3.4|~4.0",
+        "symfony/framework-bundle": "~3.4|~4.0",
+        "symfony/config": "~3.4|~4.0",
+        "symfony/http-kernel": "~3.4|~4.0",
+        "symfony/dependency-injection": "~3.4|~4.0",
+        "symfony/twig-bundle": "~3.4|~4.0",
 
         "twig/twig": "~1.34|~2.0",
         "euskadi31/opengraph": "~1.0"
